[project]
name = "toy-19-pms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hello = "toy_19_pms:hello"
