[project]
name = "toy-19-pms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.21.0",
  "fastapi>=0.123.0",
  "sqlalchemy>=2.0.44",
  "sqlmodel>=0.0.27",
  "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toy_19_pms"]

[project.scripts]
hello = "toy_19_pms:hello"
dev = "toy_19_pms.server:dev"
